--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,4 +3,12 @@
 S3method(print,tm)
 S3method(summary,tm)
 export(tm)
-import("stats")
+importFrom(stats,coef)
+importFrom(stats,dnorm)
+importFrom(stats,lm)
+importFrom(stats,pnorm)
+importFrom(stats,qnorm)
+importFrom(stats,rnorm)
+importFrom(stats,sd)
+importFrom(stats,uniroot)
+importFrom(stats,var)
