Documentation tm_bias
Documentation tm_bias, minor other edits + updated description file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,29 @@
 Package: tmsens
-Title: Sensitivty Analysis Using the Trimmed Mean Estimator
+Title: Sensitivity Analysis Using the Trimmed Mean Estimator
 Version: 0.0.0.9000
 Authors@R: c( 
-    person("Dea", "Hazelwinkel",
+    person("Audinga-Dea", "Hazewinkel",
       role = c("aut", "cre"),
-      email = "a.d.hazewinkel@bristol.ac.uk"),
+      email = "a.d.hazewinkel@bristol.ac.uk",
+    comment = c(ORCID = "0000-0002-6923-4388")),
     person("Tom", "Palmer", 
       email = "tom.palmer@bristol.ac.uk", 
     role = c("aut"),
-    comment = c(ORCID = "0000-0003-4655-4511")))
-Description: Sensitivty analysis using the trimmed mean estimator.
+    comment = c(ORCID = "0000-0003-4655-4511")),
+ person("Kate", "Tilling", 
+      email = "kate.tilling@bristol.ac.uk", 
+    role = c("aut"),
+    comment = c(ORCID = "0000-0002-1010-8926")),
+ person("Kaitlin", "Wade", 
+      email = "kaitlin.wade@bristol.ac.uk", 
+    role = c("aut"),
+    comment = c(ORCID = "0000-0003-3362-6280")),
+ person("Jack", "Bowden", 
+      email = "j.bowden2@exeter.ac.uk", 
+    role = c("aut"),
+    comment = c(ORCID = "0000-0003-2628-3304"))
+)
+Description: Sensitivity analysis using the trimmed mean estimator.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
