--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,7 @@ Authors@R: c(
     comment = c(ORCID = "0000-0003-2628-3304"))
   )
 Description: Sensitivity analysis using the trimmed means estimator.
-License: GPL-3
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
