Add URL for pkgdown site

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
     stats
-URL: https://github.com/dea-hazewinkel/tmsens 
+URL: https://github.com/dea-hazewinkel/tmsens, https://dea-hazewinkel.github.io/tmsens/
 BugReports: https://github.com/dea-hazewinkel/tmsens/issues
 Suggests: 
     testthat
