--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(
       email = "dea.hazew@gmail.com",
     comment = c(ORCID = "0000-0002-6923-4388")),
     person("Tom", "Palmer", 
-      email = "tom.palmer@bristol.ac.uk", 
+      email = "remlapmot@hotmail.com", 
     role = c("aut"),
     comment = c(ORCID = "0000-0003-4655-4511")),
  person("Kate", "Tilling", 
