usethis::use_tidy_description()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,34 +1,25 @@
 Package: tmsens
 Title: Sensitivity Analysis Using the Trimmed Means Estimator
 Version: 0.2.0
-Authors@R: c( 
-    person("Audinga-Dea", "Hazewinkel",
-      role = c("aut", "cre"),
-      email = "dea.hazew@gmail.com",
-    comment = c(ORCID = "0000-0002-6923-4388")),
-    person("Tom", "Palmer", 
-      email = "remlapmot@hotmail.com", 
-    role = c("aut"),
-    comment = c(ORCID = "0000-0003-4655-4511")),
- person("Kate", "Tilling", 
-      email = "kate.tilling@bristol.ac.uk", 
-    role = c("aut"),
-    comment = c(ORCID = "0000-0002-1010-8926")),
- person("Kaitlin", "Wade", 
-      email = "kaitlin.wade@bristol.ac.uk", 
-    role = c("aut"),
-    comment = c(ORCID = "0000-0003-3362-6280")),
- person("Jack", "Bowden", 
-      email = "j.bowden2@exeter.ac.uk", 
-    role = c("aut"),
-    comment = c(ORCID = "0000-0003-2628-3304"))
+Authors@R: c(
+    person("Audinga-Dea", "Hazewinkel", , "dea.hazew@gmail.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-6923-4388")),
+    person("Tom", "Palmer", , "remlapmot@hotmail.com", role = "aut",
+           comment = c(ORCID = "0000-0003-4655-4511")),
+    person("Kate", "Tilling", , "kate.tilling@bristol.ac.uk", role = "aut",
+           comment = c(ORCID = "0000-0002-1010-8926")),
+    person("Kaitlin", "Wade", , "kaitlin.wade@bristol.ac.uk", role = "aut",
+           comment = c(ORCID = "0000-0003-3362-6280")),
+    person("Jack", "Bowden", , "j.bowden2@exeter.ac.uk", role = "aut",
+           comment = c(ORCID = "0000-0003-2628-3304"))
   )
 Description: Sensitivity analysis using the trimmed means estimator.
 License: GPL (>= 3)
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
-URL: https://github.com/dea-hazewinkel/tmsens, https://dea-hazewinkel.github.io/tmsens/
+URL: https://github.com/dea-hazewinkel/tmsens,
+    https://dea-hazewinkel.github.io/tmsens/
 BugReports: https://github.com/dea-hazewinkel/tmsens/issues
 Suggests: 
     testthat
+Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
