--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,8 @@
-pandoc: 3.1.2
-pkgdown: 2.0.7
+pandoc: '3.3'
+pkgdown: 2.1.0
 pkgdown_sha: ~
 articles: {}
-last_built: 2023-05-11T05:41Z
+last_built: 2024-08-29T13:43Z
 urls:
   reference: https://dea-hazewinkel.github.io/tmsens/reference
   article: https://dea-hazewinkel.github.io/tmsens/articles
-
